# Snake

./: Cargo.toml  README.md
assets/: tailwind.css
src/: game_state.rs  interface.rs  main.rs  movement.rs
