[package]
name = "snake"
version = "0.1.0"
authors = ["valentinrenaud <valentinrenaud8@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
rand = "0.8"
getrandom = { version = "0.2.15", features = ["js"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
